[package]
name = "ao_json_creator"
version = "0.1.0"
authors = ["Bilal Kozak bkozak@aptos.com"]
edition = "2021"
description = "This project will facilitate deploying changes to AO platform"
license = "MIT"
repository = "https://github.com/bk0z4k/ao_json_creator"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.28.1"
egui = "0.28.1"
